Afegida plantilla de gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,42 @@
+# Fitxers RStudio 
 .Rproj.user
+.Rproj
+
+# Fitxers historics
 .Rhistory
+.Rapp.history
+
+# Fitxers de dades
 .RData
 .Ruserdata
+.RDS
+
+# Fitxers de dades en /data
+/data
+
+# fitxers temporals
 /temp
-.Rproj
+
+# Fitxer de sistema
+descktop.ini
+
+# knitr and R markdown default cache directories
+*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+
+
